# wgpu_test

./: .gitattributes  .gitignore  Cargo.toml
src/: camera.rs  instance.rs  lib.rs  shader.frag  shader.vert  texture.rs
src/resources/shaders/: shader.frag  shader.vert
