[package]
name = "wgpu_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.25", default-features = true, features = ["bytemuck"] }
wgpu = { version = "0.19", default-features = true, features = ["glsl"] }
winit = "0.29"
env_logger = "0.11"
log = "0.4"
pollster = "0.3"
bytemuck = "1.15"
image = { version = "0.24", default-features = false, features = ["png"] }
anyhow = "1.0"
rand = "0.8"
